--- a/dbus-cxx-1.0.pc.cmake.in
+++ b/dbus-cxx-1.0.pc.cmake.in
@@ -6,4 +6,5 @@ prefix=${CMAKE_INSTALL_PREFIX}
 includedir=${PKG_CONFIG_INCLUDEDIR}
 libdir=${PKG_CONFIG_LIBDIR}
 Libs: ${PKG_CONFIG_LIBS}
+Libs.private: ${PKG_CONFIG_LIBS_PRIVATE}
 Cflags: ${PKG_CONFIG_CFLAGS}
