Improve CMake dependency resolution

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -154,8 +154,20 @@ include_directories( ${DBUS_CXX_INCLUDE_DIRECTORIES}
 add_library( dbus-cxx SHARED ${DBUS_CXX_SOURCES} )
 #add_library( dbus-cxx-static STATIC ${DBUS_CXX_SOURCES} )
 set_target_properties( dbus-cxx PROPERTIES VERSION 1.0.0 SOVERSION 1 )
-target_link_libraries( dbus-cxx ${dbus_LIBS} ${sigc_LIBS} -lrt -pthread )
-target_compile_options( dbus-cxx PUBLIC -pthread )
+set( DBUS_CXX_LIBRARIES ${dbus_LIBRARIES} ${sigc_LIBRARIES} )
+
+find_library( LIBRT rt )
+if( LIBRT )
+	set( DBUS_CXX_LIBRARIES ${DBUS_CXX_LIBRARIES} ${LIBRT} )
+endif( LIBRT )
+
+set( THREADS_PREFER_PTHREAD_FLAG ON )
+find_package( Threads )
+if( Threads_FOUND )
+	set( DBUS_CXX_LIBRARIES ${DBUS_CXX_LIBRARIES} Threads::Threads )
+endif( Threads_FOUND )
+
+target_link_libraries( dbus-cxx ${DBUS_CXX_LIBRARIES} )
 
 #
 # If GLIBMM is used, add in the appropriate packages
@@ -169,9 +181,6 @@ if( ENABLE_GLIBMM )
     add_dependencies( dbus-cxx-glibmm dbus-cxx )
 
     set( install_targets ${install_targets} dbus-cxx-glibmm )
-    install( TARGETS ${install_targets}
-        LIBRARY DESTINATION "${CMAKE_INSTALL_LIBDIR}"
-        ARCHIVE DESTINATION "${CMAKE_INSTALL_LIBDIR}" )
     install( FILES dbus-cxx-glibmm.h DESTINATION include/dbus-cxx-${DBUS_CXX_MAJMIN_VERSION} )
     install( FILES dbus-cxx-glibmm/dispatcher.h DESTINATION include/dbus-cxx-${DBUS_CXX_MAJMIN_VERSION}/dbus-cxx-glibmm/ )
 endif( ENABLE_GLIBMM )
@@ -215,7 +224,7 @@ foreach( filename
             ${output_file}
     )
 
-    # we need to add a dependecy to the library to ensure that the files get regenerated
+    # we need to add a dependency to the library to ensure that the files get regenerated
     add_dependencies( dbus-cxx generate-${sanitized_file} )
 endforeach( filename )
 
@@ -328,6 +337,9 @@ endif( ENABLE_CODE_COVERAGE_REPORT )
 # Cpack for creating the dist files
 #
 set(CPACK_SOURCE_PACKAGE_FILE_NAME "dbus-cxx-${PKG_VERSION}")
+set(CPACK_PACKAGE_VERSION_MAJOR ${DBUS_CXX_PACKAGE_MAJOR_VERSION})
+set(CPACK_PACKAGE_VERSION_MINOR ${DBUS_CXX_PACKAGE_MINOR_VERSION})
+set(CPACK_PACKAGE_VERSION_PATCH ${DBUS_CXX_PACKAGE_MICRO_VERSION})
 set(CPACK_SOURCE_GENERATOR "TGZ")
 set(CPACK_SOURCE_IGNORE_FILES ".git/;build/")
 include(CPack)
