--- a/dbus-cxx-glibmm-1.0.pc.cmake.in
+++ b/dbus-cxx-glibmm-1.0.pc.cmake.in
@@ -1,7 +1,7 @@
 Name: dbus-cxx-glibmm
 Description: C++ bindings for dbus(glibmm support)
 Version: ${PKG_VERSION}
-Requires: ${PKG_CONFIG_REQUIRES}, dbus-cxx-1.0 = ${PKG_VERSION}
+Requires: glibmm-2.4, dbus-cxx-1.0 = ${PKG_VERSION}
 prefix=${CMAKE_INSTALL_PREFIX}
 includedir=${PKG_CONFIG_INCLUDEDIR}
 libdir=${PKG_CONFIG_LIBDIR}
