--- a/examples/quick-start/CMakeLists.txt
+++ b/examples/quick-start/CMakeLists.txt
@@ -1,7 +1,7 @@
 include( ../examples-common.cmake )
 
 add_executable( quickstart-client quickstart_client_0.cpp  )
-target_link_libraries( quickstart-client ${EXAMPLES_LINK} )
+target_link_libraries( quickstart-client ${EXAMPLES_LIBRARIES} )
 
 add_executable( quickstart-server quickstart_server_0.cpp  )
-target_link_libraries( quickstart-server ${EXAMPLES_LINK} )
+target_link_libraries( quickstart-server ${EXAMPLES_LIBRARIES} )
