--- a/tools/CMakeLists.txt
+++ b/tools/CMakeLists.txt
@@ -15,17 +15,23 @@ endif( TOOLS_BUNDLED_CPPGENERATE )
 pkg_check_modules( popt REQUIRED popt )
 pkg_check_modules( expat REQUIRED expat )
 
-set( TOOLS_INCLUDES ${dbus_INCLUDE_DIRS} ${sigc_INCLUDE_DIRS} ${cppgenerate_INCLUDE_DIRS} )
-set( TOOLS_LINK dbus-cxx ${dbus_LDFLAGS} ${sigc_LDFLAGS} ${popt_LDFLAGS} ${expat_LDFLAGS} -lrt )
+set( TOOLS_LIBRARY_DIRS ${dbus_LIBRARY_DIRS} ${sigc_LIBRARY_DIRS} ${popt_LIBRARY_DIRS} ${expat_LIBRARY_DIRS} )
+set( TOOLS_LIBRARIES dbus-cxx ${dbus_LIBRARIES} ${sigc_LIBRARIES} ${popt_LIBRARIES} ${expat_LIBRARIES} )
 
+if( LIBRT )
+	set( TOOLS_LIBRARIES ${TOOLS_LIBRARIES} ${LIBRT} )
+endif( LIBRT )
 
-link_directories( ${CMAKE_BINARY_DIR} )
+link_directories( ${CMAKE_BINARY_DIR} ${TOOLS_LIBRARY_DIRS} )
 
 include_directories( ${CMAKE_SOURCE_DIR}/dbus-cxx
     ${CMAKE_BINARY_DIR}/dbus-cxx 
     ${dbus_INCLUDE_DIRS} 
     ${sigc_INCLUDE_DIRS}
-    ${cppgenerate_INCLUDE_DIRS} )
+    ${cppgenerate_INCLUDE_DIRS}
+    ${expat_INCLUDE_DIRS}
+    ${popt_INCLUDE_DIRS}
+)
 
 add_executable( dbus-cxx-xml2cpp 
     generate_adapter.cpp
@@ -38,7 +44,7 @@ add_executable( dbus-cxx-xml2cpp
     signal.cpp 
     code-generator.cpp 
 )
-target_link_libraries( dbus-cxx-xml2cpp ${TOOLS_LINK} ${cppgenerate_LDFLAGS} )
+target_link_libraries( dbus-cxx-xml2cpp ${TOOLS_LIBRARIES} ${cppgenerate_LDFLAGS} )
 install( TARGETS dbus-cxx-xml2cpp DESTINATION bin )
 
 if( TOOLS_BUNDLED_CPPGENERATE )
@@ -47,6 +53,6 @@ endif( TOOLS_BUNDLED_CPPGENERATE )
 
 add_executable( dbus-cxx-introspect
     introspect.cpp )
-target_link_libraries( dbus-cxx-introspect ${TOOLS_LINK} )
+target_link_libraries( dbus-cxx-introspect ${TOOLS_LIBRARIES} )
 install( TARGETS dbus-cxx-introspect DESTINATION bin )
 
