Add Windows support

--- a/dbus-cxx-1.0.pc.cmake.in
+++ b/dbus-cxx-1.0.pc.cmake.in
@@ -2,7 +2,7 @@ Name: dbus-cxx
 Description: C++ bindings for dbus
 Version: ${PKG_VERSION}
 Requires: ${PKG_CONFIG_REQUIRES}
-prefix=${CMAKE_INSTALL_PREFIX}
+prefix=${PKG_CONFIG_INSTALL_PREFIX}
 includedir=${PKG_CONFIG_INCLUDEDIR}
 libdir=${PKG_CONFIG_LIBDIR}
 Libs: ${PKG_CONFIG_LIBS}
