--- a/tools/CMakeLists.txt
+++ b/tools/CMakeLists.txt
@@ -7,7 +7,11 @@ if( TOOLS_BUNDLED_CPPGENERATE )
                          INSTALL_COMMAND "")
     ExternalProject_Get_Property( cppgenerate BINARY_DIR )
     set( cppgenerate_INCLUDE_DIRS ${CMAKE_CURRENT_SOURCE_DIR}/libcppgenerate )
-    set( cppgenerate_LDFLAGS ${BINARY_DIR}/libcppgenerate.a )
+    if( WIN32 )
+        set( cppgenerate_LDFLAGS "${BINARY_DIR}/$<$<CONFIG:Debug>:Debug>$<$<CONFIG:Release>:Release>/cppgenerate.lib" )
+    else()
+        set( cppgenerate_LDFLAGS ${BINARY_DIR}/libcppgenerate.a )
+    endif( WIN32 )
 else()
     pkg_check_modules( cppgenerate REQUIRED cppgenerate-static )
 endif( TOOLS_BUNDLED_CPPGENERATE )
@@ -56,3 +60,7 @@ add_executable( dbus-cxx-introspect
 target_link_libraries( dbus-cxx-introspect ${TOOLS_LIBRARIES} )
 install( TARGETS dbus-cxx-introspect DESTINATION bin )
 
+if( MSVC )
+    set_target_properties( dbus-cxx-xml2cpp PROPERTIES LINK_FLAGS "/NODEFAULTLIB:\"libcmt\"")
+    set_target_properties( dbus-cxx-introspect PROPERTIES LINK_FLAGS "/NODEFAULTLIB:\"libcmt\"")
+endif( MSVC )
